--- a/anime_app/templates/header.html
+++ b/anime_app/templates/header.html
@@ -2,11 +2,17 @@
     <div class="logo">KOTOME</div>
     <nav>
         <ul>
-            <li><a href="/">Главная</a></li>
-            <li><a href="/catalog/">Каталог</a></li>
+            <li><a href="{% url 'home' %}">Главная</a></li>
+            <li><a href="{% url 'catalog' %}">Каталог</a></li>
             <li><a href="#">Закладки</a></li>
-            <li><a href="#">Профиль...</a></li>
+            {% if user.is_authenticated %}
+                <li><a href="#">{{ user.username }}...</a></li>
+            {% endif %}
         </ul>
     </nav>
-    <button class="login-btn">Войти</button>
+    {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}" class="login-btn">Выйти</a>
+    {% else %}
+        <a href="{% url 'login' %}" class="login-btn">Войти</a>
+    {% endif %}
 </header>
