--- a/anime_app/templates/header.html
+++ b/anime_app/templates/header.html
@@ -3,10 +3,10 @@
     <nav>
         <ul>
             <li><a href="{% url 'home' %}">Главная</a></li>
-            <li><a href="{% url 'catalog' %}">Каталог</a></li>
+            <li><a href="{% url 'categories' %}">Категории</a></li>  <!-- ← вместо Каталог -->
             <li><a href="#">Закладки</a></li>
             {% if user.is_authenticated %}
-                <li><a href="#">{{ user.username }}...</a></li>
+                <li><a href="{% url 'profile' %}">{{ user.username }}...</a></li>
             {% endif %}
         </ul>
     </nav>
