--- a/anime_app/templates/login.html
+++ b/anime_app/templates/login.html
@@ -19,21 +19,13 @@
             {% endif %}
             
             <div class="form-group">
-                <label class="form-label">Логин (e-mail):</label>
-                <input type="email" class="form-input" placeholder="Ваш e-mail" name="email" required>
-                <div class="checkbox-group">
-                    <input type="checkbox" class="checkbox" id="remember-email" name="remember_me">
-                    <label for="remember-email" class="checkbox-label">Запомнить e-mail</label>
-                </div>
+                <label class="form-label">Логин:</label>
+                <input type="text" class="form-input" placeholder="Ваш логин" name="username" required>
             </div>
 
             <div class="form-group">
                 <label class="form-label">Пароль:</label>
                 <input type="password" class="form-input" placeholder="Ваш пароль" name="password" required>
-                <div class="checkbox-group">
-                    <input type="checkbox" class="checkbox" id="show-password">
-                    <label for="show-password" class="checkbox-label">Показать пароль</label>
-                </div>
             </div>
 
             <button type="submit" class="submit-btn">
