--- a/anime_app/templates/register.html
+++ b/anime_app/templates/register.html
@@ -43,7 +43,7 @@
                 <div class="captcha-group">
                     <input type="text" class="form-input captcha-input" placeholder="Код с картинки" name="captcha" required>
                     <div class="captcha-image">
-                        <img src="images/kapha.png" alt="Капча">
+                        <img src="{% static 'images/kapha.png' %}" alt="Капча">
                     </div>
                 </div>
             </div>
